tests/ui/issues/issue-74236/main.stderr
error[E0308]: mismatched types
  --> $DIR/main.rs:7:9
   |
LL |     let () = dep::Renamed;
   |         ^^   ------------ this expression has type `Renamed`
   |         |
   |         expected `Renamed`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
